@@ -1,3 +1,9 @@
+Mon May 16 19:21:37 CEST 2005 Daniel Veillard <veillard@redhat.com>
+
+	* Makefile.am: fix "make rpm"
+	* lib/cache.py: first version of the cache code, not plugged yet
+	  regression tests needed, and timeout contorl need to be added too
+
 2005-05-13  Mark McLoughlin  <markmc@redhat.com>
 
 	* sabayon.spec.in: update the %files list.
